{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 457,
  "lineage": "2f0640fc-4824-04ba-e9c3-f64a2ade46f6",
  "resources": [
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:internet-gateway/igw-03b40ed5c878d76bc",
            "id": "igw-03b40ed5c878d76bc",
            "owner_id": "711387138131",
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "dependencies": [
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:route-table/rtb-0ccc835130f0f1815",
            "id": "rtb-0ccc835130f0f1815",
            "owner_id": "711387138131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b40ed5c878d76bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_internet_gateway.internetgw",
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_nodegroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:route-table/rtb-075f18b938cbd9da4",
            "id": "rtb-075f18b938cbd9da4",
            "owner_id": "711387138131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b40ed5c878d76bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_internet_gateway.internetgw",
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_nodegroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd6d20f635a6318",
            "route_table_id": "rtb-075f18b938cbd9da4",
            "subnet_id": "subnet-0411abe67d18bf720"
          },
          "dependencies": [
            "module.max_weather.aws_internet_gateway.internetgw",
            "module.max_weather.aws_route_table.eks_nodegroup",
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_subnet.eks_nodegroup",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cece322e3c2760f1",
            "route_table_id": "rtb-0ccc835130f0f1815",
            "subnet_id": "subnet-03ced914179f70eee"
          },
          "dependencies": [
            "module.max_weather.aws_internet_gateway.internetgw",
            "module.max_weather.aws_route_table.eks_cluster",
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        },
        {
          "index_key": "subnet-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077215137a423d4af",
            "route_table_id": "rtb-0ccc835130f0f1815",
            "subnet_id": "subnet-072c72b0cb65ffa46"
          },
          "dependencies": [
            "module.max_weather.aws_internet_gateway.internetgw",
            "module.max_weather.aws_route_table.eks_cluster",
            "module.max_weather.aws_subnet.eks_cluster",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group/sg-0d5c6aa9a87b26428",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5c6aa9a87b26428",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-cluster",
            "name_prefix": "",
            "owner_id": "711387138131",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group/sg-02c333cbda41124f8",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c333cbda41124f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-nlb",
            "name_prefix": "",
            "owner_id": "711387138131",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "eks-nlb"
            },
            "tags_all": {
              "name": "eks-nlb"
            },
            "timeouts": null,
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:subnet/subnet-03ced914179f70eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ced914179f70eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387138131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "dependencies": [
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        },
        {
          "index_key": "subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:subnet/subnet-072c72b0cb65ffa46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072c72b0cb65ffa46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387138131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "dependencies": [
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_nodegroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:subnet/subnet-0411abe67d18bf720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0411abe67d18bf720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387138131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/test": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/test": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-080e8656fe951e292"
          },
          "dependencies": [
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:vpc/vpc-080e8656fe951e292",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d91d782526af014",
            "default_route_table_id": "rtb-04221c23bdc8f2729",
            "default_security_group_id": "sg-043d134026f2f2360",
            "dhcp_options_id": "dopt-06b015925734a60f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080e8656fe951e292",
            "instance_tenancy": "default",
            "ipv4_ipam_pool_id": "ipam-pool-005906859c6f2e573",
            "ipv4_netmask_length": 16,
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04221c23bdc8f2729",
            "owner_id": "711387138131"
          },
          "dependencies": [
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group-rule/sgr-0a105a96c1a1cd76c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a105a96c1a1cd76c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d5c6aa9a87b26428",
            "security_group_rule_id": "sgr-0a105a96c1a1cd76c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_security_group.eks",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "eks-nlb_allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group-rule/sgr-0a7c40829839df8c0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0a7c40829839df8c0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c333cbda41124f8",
            "security_group_rule_id": "sgr-0a7c40829839df8c0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_security_group.eks-nlb",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_443_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group-rule/sgr-0a8564ad081f3b97b",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0a8564ad081f3b97b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d5c6aa9a87b26428",
            "security_group_rule_id": "sgr-0a8564ad081f3b97b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_security_group.eks",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    },
    {
      "module": "module.max_weather",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "eks-nlb_allow_443_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711387138131:security-group-rule/sgr-0401cdd466f7eb590",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0401cdd466f7eb590",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02c333cbda41124f8",
            "security_group_rule_id": "sgr-0401cdd466f7eb590",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.max_weather.aws_security_group.eks-nlb",
            "module.max_weather.aws_vpc.vpc",
            "module.max_weather.aws_vpc_ipam.vpc_ipam",
            "module.max_weather.aws_vpc_ipam_pool.vpc_ipam_pool",
            "module.max_weather.aws_vpc_ipam_pool_cidr.vpc_ipam_pool_cidr"
          ]
        }
      ]
    }
  ]
}